syntax = "proto3";

package auth.v1;

import "common/v1/locale.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/auth/v1;authv1";

// AccountProfile stores private account preferences owned by auth.
message AccountProfile {
  string user_id = 1;
  common.v1.Locale locale = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  reserved 2, 6, 7;
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  AccountProfile profile = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  common.v1.Locale locale = 3;
  reserved 2, 4, 5;
}

message UpdateProfileResponse {
  AccountProfile profile = 1;
}

// AccountService exposes profile management operations for account settings.
service AccountService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}
